--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Ripper-S Blog
-SEOTitle: Ripper-S Blog
+SEOTitle: 陈述的博客 | Ripper-S Blog
 header-img: img/post-bg-desk.jpg
 email:
 description: "We are Anonymous"
 keyword: "Ripper-S,Ripper-S Blog,Linux,C,SWUpdate"
 url: "http://ripper-s.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/Ripper-S" # you code repository
+github_repo: "https://github.com/Ripper-S/Ripper-S.github.io" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
