--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: /img/boy.jpg      # use absolute URL
 # SNS settings
 RSS: false
 github_username:       Ripper-S
-zhihu_username:         Ripper.S
+zhihu_username:         Ripper_S
 #weibo_username:     
 #facebook_username:  
 #jianshu_username:   
