--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Ripper-S Blog
 SEOTitle: 陈述的博客 | Ripper-S Blog
-header-img: img/post-bg-desk.jpg
+header-img: img/typewriter.jpg
 email:
 description: "We are Anonymous"
 keyword: "Ripper-S,Ripper-S Blog,Linux,C,SWUpdate"
