--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Ripper-S Blog
 SEOTitle: Ripper-S Blog
-header-img: img/Anonymous.png
+header-img: img/lock.jpg
 email:
 description: "We are Anonymous"
 keyword: "Anonymous,Ripper-S,Ripper-S Blog,Linux,C,SWUpdate"
