--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Ripper-S Blog
 SEOTitle: Ripper-S Blog
 header-img: img/lock.jpg
 email: ripper-s@ripper-s.com
-description: "Swordsman on the Internet"
+description: "Swordsman on the Internet～"
 keyword: "Swordsman,Ripper-S,Ripper-S Blog,Linux,C,SWUpdate"
 url: "http://ripper-s.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
